# serializer version: 1
# name: TestAttachLabels.test_multi
  list([
    dict({
      'id': 'foo',
      'labels': list([
        dict({
          'color': '#03fc20',
          'description': 'This is a question',
          'id': 2,
          'name': 'Question',
        }),
      ]),
      'name': 'Foo',
    }),
    dict({
      'id': 'bar',
      'labels': list([
        dict({
          'color': '#a83432',
          'description': 'This is a bug',
          'id': 1,
          'name': 'Bug',
        }),
        dict({
          'color': '#03fc20',
          'description': 'This is a question',
          'id': 2,
          'name': 'Question',
        }),
      ]),
      'name': 'Bar',
    }),
    dict({
      'id': 'baz',
      'labels': list([
      ]),
      'name': 'Baz',
    }),
  ])
# ---
# name: TestAttachLabels.test_single
  dict({
    'id': 'foo',
    'labels': list([
      dict({
        'color': '#a83432',
        'description': 'This is a bug',
        'id': 1,
        'name': 'Bug',
      }),
      dict({
        'color': '#03fc20',
        'description': 'This is a question',
        'id': 2,
        'name': 'Question',
      }),
    ]),
    'name': 'Foo',
  })
# ---
